# LP1-PROJETO-SPOTFY-CLI

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  spotfy_cli
data/: banco.txt
docs/: Definitions_8hpp_source.html  DisplayMenus_8hpp_source.html  List_8hpp_source.html  Menu_8hpp_source.html  Music_8hpp_source.html  Node_8hpp_source.html  PlaylistManager_8hpp_source.html  PlaylistMusicsManager_8hpp_source.html  Playlist_8hpp_source.html  TerminalColors_8hpp_source.html  annotated.html  classList-members.html  classList.html  classMusic-members.html  classMusic.html  classNode-members.html  classNode.html  classPlaylist-members.html  classPlaylist.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bc3bdde58610ae500ff9644b34b3588a.html  dir_e50b5e596ea7fd3b3876850f33cb4b65.html  dir_ef8b3432b6b530bfc23a979c7dbf8914.html  files.html  functions.html  functions_func.html  functions_vars.html  md_README.html  menudata.js  pages.html
include/: Definitions.hpp  DisplayMenus.hpp  FileManager.hpp  List.hpp  Menu.hpp  Music.hpp  MusicManager.hpp  Playlist.hpp  PlaylistManager.hpp  PlaylistMusicsManager.hpp  TerminalColors.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_3.js  functions_4.js  functions_6.js  pages_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: DisplayMenus.cpp  FileManager.cpp  List.cpp  Main.cpp  Menu.cpp  Music.cpp  MusicsManager.cpp  Playlist.cpp  PlaylistManager.cpp  (+2 more)
(+55 files in other folders)
